--- a/scripts/abn_timing_abstract.Rmd
+++ b/scripts/abn_timing_abstract.Rmd
@@ -1,11 +1,11 @@
 ---
-title: "The impermanence of agricultural abandonment limits potential for environmental benefits (draft)"
+title: "The impermanence of cropland abandonment limits potential for environmental benefits (draft)"
 author: Christopher L. Crawford,$^a$$^*$ He Yin,$^b$ Volker Radeloff,$^c$ and David S. Wilcove$^{a, d}$
 date: "`r format(Sys.time(), '%B %d, %Y')`"
 abstract: |
   | $^a$Princeton School of Public and International Affairs, Princeton University, Princeton, NJ
   | $^b$Department of Geography, Kent State University, Kent, OH
-  | $^c$Department of Forest & Wildlife Ecology, University of Wisconsin - Madison, Madison, WI
+  | $^c$Department of Forest & Wildlife Ecology, University of Wisconsin-Madison, Madison, WI
   | $^d$Department of Ecology & Evolutionary Biology, Princeton University, Princeton, NJ
   |
   | $^*$Corresponding Author, ccrawford@princeton.edu, Robertson Hall, Princeton University, Princeton, NJ
@@ -30,8 +30,6 @@ knitr::opts_chunk$set(
   echo = FALSE
   )
 
-
-
 # nocite: |
 #   @RStudioTeam2020, @R-rmarkdown, @R-bookdown, @R-knitr
 ```
@@ -54,14 +52,12 @@ site_sf <- st_read(paste0(p_dat_derived, "site_sf.shp"))
 
 
 
+# load all length data (distilled)
+length_distill_df <- read_csv(file = paste0(p_dat_derived, run_label, "/", 
+                                            "length_distill_df", run_label, ".csv"))
 
 # load mean length data:
 mean_length_df <- read_csv(file = paste0(p_dat_derived, run_label, "/", "mean_length_df", run_label, ".csv"))
-
-mean_mean_df <- mean_length_df %>% 
-  group_by(abn_threshold, length_type) %>%
-  summarise(mean_mean = mean(mean_length, na.rm = TRUE),
-            mean_median = mean(median_duration, na.rm = TRUE))
 
 
 # load decay rate data
@@ -75,38 +71,155 @@ extrapolate_df_l3 <- read_csv(file = paste0(p_dat_derived, run_label, "/extrapol
 ```
 
 
+```{r all-sites-summary-stats}
+# Question 1: There are two ways to calculate the mean duration across all sites. Which is better:
+# 1. Mean of means: take the mean of all of the site mean lengths
+# 2. Pool all raw abandonment periods together, and take mean of that. (Alternatively, the weighted mean of means by sample size.)
+
+
+# Question 2: If we calculate the mean of means, to deal with different sample sizes, how should we calculate the standard deviation?
+# 1. Standard deviation of the mean values, or
+# 2. Mean of standard deviations at each site.  
+
+# The first has an advantage of giving each site the same weight. Because the sample sizes at each site are not the same, the interpretation gets a bit tricky if one simply pools all the periods. In this case, sites with a larger area, which have more pixels and therefore more periods of abandonment, have a larger effect on the overall mean.
+
+# the two are quite similar, so just use the mean of means
+
+# ---------------------------------------------------------------- #
+# 1. Take mean of the site mean lengths:
+# note, this is the value given for the horizontal dashed lines on the main mean abn duration figure
+knitr::include_graphics(path = paste0(p_plots, run_label, "/mean_lengths", run_label, ".png"))
+
+
+summary_stats_all_sites <- mean_length_df %>%
+  filter(abn_threshold == 5,
+         length_type == "all") %>% 
+  group_by(abn_threshold, length_type) %>%
+  summarise(mean_of_means = mean(mean_duration),
+            sd_of_means = sd(mean_duration),
+            mean_of_sds = mean(sd_duration)
+            )
+
+summary_stats_all_sites$mean_of_means
+summary_stats_all_sites$sd_of_means
+summary_stats_all_sites$mean_of_sds
+
+
+
+# ---------------------------------------------------------------- #
+# 2. Pool all raw abandonment periods together
+summary_stats_all_sites_pooled <- length_distill_df %>%
+  as_tibble() %>%
+  filter(length >= 5, length_type == "all") %>%
+  mutate(product = length*freq) %>%
+  group_by() %>%
+  summarise(mean_duration = sum(product)/sum(freq),
+            median_duration = median(rep(length, freq)),
+            # mean_test = mean(rep(length, freq)), # same as above
+            sd_duration = sd(rep(length, freq))
+            )
+
+summary_stats_all_sites_pooled$mean_duration
+
+# alternatively, calculate the weighted mean:
+# number of abandonment periods at each site:
+n_abn_periods <- length_distill_df %>%
+  as_tibble() %>%
+  filter(length >= 5, length_type == "all") %>%
+  group_by(site) %>%
+  summarise(n_abn_periods = sum(freq))
+
+n_abn_periods %>%
+  left_join(filter(mean_length_df, length_type == "all", abn_threshold == 5), # filtered site means
+            by = "site") %>% 
+  mutate(prod = mean_duration * n_abn_periods) %>%
+  group_by() %>%
+  summarise(sum_prod = sum(prod),
+            sum_n = sum(n_abn_periods),
+            w_mean = sum_prod/sum_n)
+```
+
+
+```{r alt-means, eval = FALSE}
+# alternative alternative, make a vector of all periods, and compute stats directly
+length_filtered <- length_distill_df %>%
+  as_tibble() %>%
+  filter(length >= 5, length_type == "all")
+
+length_filtered_distilled <- length_filtered %>% 
+  group_by(length) %>% 
+  summarise(total_freq = sum(freq)) 
+
+repeats <- rep(length_filtered_distilled$length, length_filtered_distilled$total_freq)
+sd(repeats)
+mean(repeats)
+median(repeats)
+```
+
+
+```{r collect-stats, include = FALSE}
+# Testing how the tibble looks `r filter(mean_length_df, abn_threshold == 5, length_type == "all") %>% ungroup() %>% slice_min(order_by = mean_duration) %>% select(site) %>% unlist() %>% capwords()`
+
+filter(mean_length_df, abn_threshold == 5, length_type == "all") %>% ungroup() %>% summarise(min = min(mean_duration))
+
+filter(mean_length_df, abn_threshold == 5, length_type == "all") %>% arrange(mean_duration) %>% .[1, ] %>% .$site
+
+filter(mean_length_df, abn_threshold == 5, length_type == "all") %>%
+  ungroup() %>% slice_min(order_by = mean_duration) %>% select(site) %>% unlist() %>% capwords()
+
+
+
+mean_length_df %>% 
+  filter(abn_threshold == 5, length_type == "all") %>% #select(mean_duration) %>% 
+  arrange(mean_duration) #%>% summary()
+
+filter(mean_length_df, abn_threshold == 5, length_type == "all") %>% .$mean_duration %>% min()
+filter(mean_length_df, abn_threshold == 5, length_type == "all") %>% .$mean_duration %>% max()
+
+mean_mean_df %>% filter(abn_threshold == 5, length_type == "all") %>% .$mean_mean
+
+
+
+# decay mod numbers:
+
+mean_coef_df_wide_l3 %>% filter(site == "shaanxi") %>% .$time_to_0.5 %>% round(digits = 1)
+
+
+# extrapolation
+extrapolate_df_l3 %>% select(site, max_mean_age) %>% unique() %>% arrange(max_mean_age) %>% .$max_mean_age %>% .[9] %>% round(digits = 2)
+
+```
+
 # Abstract
 *Must be <250 words (currently 255)*
 
-Agriculture remains a dominant driver of land-use change at a global level, yet many areas are experiencing agricultural abandonment as a result of demographic, economic, and environmental changes.
-Abandoned croplands may represent a significant source of cheap land and are highly sought after for increased cultivation, biofuel production, carbon sequestration, and habitat restoration.
-Crucially, however, such opportunities depend on the duration and persistence of abandonment, yet we lack a detailed empirical understanding of land-use outcomes following abandonment.
-Here, we leverage new high resolution annual maps of agricultural abandonment to examine the timing of abandonment at eleven sites that have experienced abandonment since the 1980s.
-We find that abandonment is frequently fleeting, lasting an average of `r filter(mean_length_df, abn_threshold == 5, length_type == "all") %>% .$mean_length %>% min() %>% round(digits = 1)` to `r filter(mean_length_df, abn_threshold == 5, length_type == "all") %>% .$mean_length %>% max() %>% round(digits = 1)` years between 1987 and 2017 (excluding short-term fallowing).
-By modeling the trajectories of individual abandoned croplands and their subsequent recultivation, we are able to estimate the length of abandonment, regardless of when it took place in the 30-year time series.
-At most sites, more than 50% of abandoned croplands were recultivated within 30 years, and some sites, particularly those Eastern Europe, Russia, and the US, showed accelerating recultivation.
-Moreover, if abandonment and recultivation continue at similar rates, the mean duration of abandonment at most sites will likely plateau between `r extrapolate_df_l3 %>% select(site, max_mean_age) %>% unique() %>% arrange(max_mean_age) %>% .$max_mean_age %>% .[1] %>% round(digits = 1)` and `r extrapolate_df_l3 %>% select(site, max_mean_age) %>% unique() %>% arrange(max_mean_age) %>% .$max_mean_age %>% .[9] %>% round(digits = 1)` years by about 2040.
-Our results show that counter to recent assumptions, most abandonment is unlikely to be permanent.
-Without active efforts to reduce turnover, ecological succession is unlikely to last long enough to produce appreciable gains in biodiversity and carbon.
+Agricultural expansion is a major cause of land-use change globally, but millions of hectares of cropland are being abandoned as a result of demographic, economic, and environmental changes.
+These abandoned croplands could be immensely valuable for carbon sequestration and biodiversity restoration.
+However, their environmental value depends on the duration and persistence of abandonment, which is poorly known.
+Here, we use new high-resolution satellite imagery to examine the timing and duration of abandonment at eleven sites across four continents (various environments) that have experienced cropland abandonment from 1987 and 2017.
+We find that abandonment is by and large fleeting, lasting on average only `r summary_stats_all_sites$mean_of_means %>% round(digits = 2)` years (SD = `r summary_stats_all_sites$mean_of_sds %>% round(digits = 2)`)^[*NB: both values are relevant means of site summary statistics, i.e. means and standard deviations*]
+At most sites, more than 50% of abandoned croplands were recultivated within 30 years, and some sites, particularly in Eastern Europe, Russia, and the US, showed accelerating rates of recultivation.
+If current rates of abandonment continue, the mean duration of abandonment at most sites will likely plateau between `r extrapolate_df_l3 %>% select(site, max_mean_age) %>% unique() %>% arrange(max_mean_age) %>% .$max_mean_age %>% .[1] %>% round(digits = 1)` and `r extrapolate_df_l3 %>% select(site, max_mean_age) %>% unique() %>% arrange(max_mean_age) %>% .$max_mean_age %>% .[9] %>% round(digits = 1)` years by about 2040.
+Counter to optimistic assumptions, most abandonment is unlikely to be permanent and will produce little in the way of carbon or biodiversity benefits.
+New policies and incentives will be needed to lengthen the period of abandonment so as to generate these and other benefits.
 Until then, abandoned croplands will remain untapped opportunities.
-
-```{r cuts}
-# 
-# Only one site showed more durable abandonment: `r site_df$description[9]`, where projections require `r mean_coef_df_wide_l3 %>% filter(site == "shaanxi") %>% .$time_to_0.5 %>% round(digits = 1)` years for 50% abandoned cropland to be recultivated, likely a result of Chinese reforestation and afforestation programs.
-```
 
 
 # Significance Statement
 *Must be <120 words (currently 132)*
 
-Broad demographic, economic, and environmental changes are reorganizing both people and agriculture, sometimes resulting in cropland abandonment. 
-While sometimes seen as a threat to food security, cultural history, and farmland biodiversity, abandonment is increasing billed as an opportunity for habitat restoration, carbon sequestration, or renewable energy.
-Yet until now, scientists have mostly relied on single snapshots in time to estimate abandonment, with misleading results.
-Using annual land-cover maps, we track abandonment and recultivation at eleven sites that have recently experienced abandonment.
-Contrary to assumptions, abandonment is short-lived and frequently recultivated within 30 years.
-Potential environmental benefits largely depend on how long ecosystems have to regenerate in abandoned croplands and accumulate carbon and biodiversity, a long process in many ecosystems.
-Until policymakers take steps to reduce turnover, abandonment risks remaining a missed opportunity.
+Demographic, economic, and environmental changes often result in cropland abandonment. 
+While sometimes seen as a threat to food security and cultural landscapes, abandonment is increasing billed as an opportunity for habitat restoration and carbon sequestration.
+However, those environmental benefits largely depend on how long ecosystems can regenerate in abandoned croplands and accumulate carbon and biodiversity, which takes decades in many ecosystems.
+Existing studies often rely on single snapshots in time to estimate abandonment, and ignored recultivation.
+Using annual land-cover maps, we track abandonment and recultivation at eleven sites across four continents that have recently experienced abandonment.
+Contrary to previous assumptions, abandonment is short-lived and lands are frequently recultivated.
+Until policymakers take steps to reduce recultivation, abandonment will remain a missed opportunity.
 
+```{r cuts}
+# 
+# Only one site showed more durable abandonment: `r site_df$description[9]`, where projections require `r mean_coef_df_wide_l3 %>% filter(site == "shaanxi") %>% .$time_to_0.5 %>% round(digits = 1)` years for 50% abandoned cropland to be recultivated, likely a result of Chinese reforestation and afforestation programs.
+```
 
 
 ```{r old-language, include = FALSE}
@@ -141,43 +254,4 @@ Until policymakers take steps to reduce turnover, abandonment risks remaining a 
 # 
 # Yet permanent abandonment is far from guaranteed: abandoned lands are increasingly sought after for increased cultivation, renewable energy, and biofuel production, calling the potential for long-term regeneration into question. 
 # Using a time-series of high-resolution maps of abandonment, I ask the following: how long does abandoned agricultural land typically remain abandoned for, and how does this vary geographically across sites? Then, by modeling the recultivation of abandoned lands through time, I provide insights about the potential benefits that may accrue into the future if current recultivation trends continue. Finally, I investigate which spatial factors best explain which lands are abandoned for longer periods of time. Together, these results provide a clearer picture of the potential for habitat regeneration to take place in abandoned croplands, and in turn, to provide benefits in terms of species habitat gains and carbon sequestration. As abandonment trends continue around the world, these results will help improve policy responses to abandonment, either to reduce frequent turnover and gain more benefits from abandoned lands, or to target conservation investment and protection to those areas that are more likely to provide environmental benefits.
-```
-
-
-
-
-
-```{r, include = FALSE}
-# Testing how the tibble looks `r filter(mean_length_df, abn_threshold == 5, length_type == "all") %>% ungroup() %>% slice_min(order_by = mean_length) %>% select(site) %>% unlist() %>% capwords()`
-
-filter(mean_length_df, abn_threshold == 5, length_type == "all") %>% ungroup() %>% summarise(min = min(mean_length))
-
-filter(mean_length_df, abn_threshold == 5, length_type == "all") %>% arrange(mean_length) %>% .[1, ] %>% .$site
-
-filter(mean_length_df, abn_threshold == 5, length_type == "all") %>%
-  ungroup() %>% slice_min(order_by = mean_length) %>% select(site) %>% unlist() %>% capwords()
-
-
-
-mean_length_df %>% 
-  filter(abn_threshold == 5, length_type == "all") %>% #select(mean_length) %>% 
-  arrange(mean_length) #%>% summary()
-
-filter(mean_length_df, abn_threshold == 5, length_type == "all") %>% .$mean_length %>% min()
-
-filter(mean_length_df, abn_threshold == 5, length_type == "all") %>% .$mean_length %>% max()
-
-mean_mean_df %>% filter(abn_threshold == 5, length_type == "all") %>% .$mean_mean
-
-
-
-# decay mod numbers:
-
-mean_coef_df_wide_l3 %>% filter(site == "shaanxi") %>% .$time_to_0.5 %>% round(digits = 1)
-
-
-
-# extrapolation
-extrapolate_df_l3 %>% select(site, max_mean_age) %>% unique() %>% arrange(max_mean_age) %>% .$max_mean_age %>% .[9] %>% round(digits = 2)
-
 ```
